eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapi-deployment
  labels:
    app: bankapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankapi
  template:
    metadata:
      labels:
        app: bankapi
    spec:
      containers:
        - name: bankapi
          image: 205930641651.dkr.ecr.eu-central-1.amazonaws.com/bankapi:latest
          ports:
            - containerPort: 8080
