eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapi-service
spec:
  selector:
    app: bankapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
