eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapi-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/allow-http: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "go.bankapionline.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bankapi-service
                port:
                  number: 80
  tls:
    - hosts:
        - "go.bankapionline.com"
      secretName: bankapi-cert
